Changelog
=========


1.1.4 (unreleased)
------------------

- Add Categories translation
  [ttschanz]


1.1.3 (2011-12-05)
------------------

- Restrict references to categories in blog entries to portal_type
  'BlogCategory'. This fixes a huge performance issue with the add and edit
  views of blog entries.
  [Thomas Buchberger]


1.1.2 (2011-05-15)
------------------

- Fixed and optimized calculation of archive statisics per month in archive
  portlet.
  [Thomas Buchberger]

- Also display the archive portlet in a blog translation which doesn't have
  any blog items but other translations do.
  [Thomas Buchberger]


1.1.1 (unreleased)
------------------

- Fixed: method getTranslation return None instead of self if there are no
  translations. We need to handle this. 
  ftw/blog/browser/blog.py
  [20.04.2011, elio.schmutz]


1.1 (2011-02-25)
----------------

- Added support for LinguaPlone.
  [buchi]

- Some refactoring and code cleanup.
  [buchi]


1.0c4
-----
- Fire set_description event also on init. 
  [15.02.2011, mathias.leimgruber]


1.0c3
-----
- Be more like wordpress (don't show description, show first 200 chars in
  overview)
  [08.02.2011, mathias.leimgruber]
  
- Added image listing on blogentries. 
  [08.02.2011, mathias.leimgruber]


1.0c2
-----

- Removed AnnotationStorage from some fields
  [08.09.2010, jbaumann]

- renamed from izug.blog to ftw.blog
- removed all dependencies to izug packages (izug.tagging, izug.webcontent ect.)


1.0
---

- Fix CSS Problem for IE8
  [fsprenger]

- fix viewlet.xml and evenhandlers
  [mathias.leimgruber]

- fix blog actions viewlet
  [mathias.leimgruber]

- remove Orgunit and ContentPage from profile 
  [mathias.leimgruber]
  
- remove unnecessary dependencies
  [mathias.leimgruber]


0.8
---

- enabling editableBorder again, otherwise editing is not possible
  [fsp]


- fix weird error with an not removable old portlet (blog.tags.portlet)
  [mathias.leimgruber]

