@@ -118,9 +118,6 @@
         </tal:foldercontents>
         </metal:listingmacro>
       </div>
-       <div class="rightColumn">
-          <tal:block replace="structure provider:blog.portlets" />
-       </div>
        <div class="visualClear"><!-- --></div>
     </metal:main-macro>
     </div>
