@@ -1,6 +1,0 @@
-from plone.portlets.interfaces import IPortletManager
-
-
-class IBlogPortlets(IPortletManager):
-    """Portlet manager for the blog
-    """
